# cpp-ecs

./: .clangd  .justfile  CMakeLists.txt  filter_compdb.py
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  app.cpp  app.cppm
src/ecs/: CMakeLists.txt
src/ecs/include/: ecs-access-set.hpp  ecs-app.hpp  ecs-commands.hpp  ecs-events.hpp  ecs-executor.hpp  ecs-query.hpp  ecs-resource.hpp  ecs-schedulable.hpp  ecs-scheduler.hpp  ecs-system-context.hpp  ecs-system-traits.hpp  ecs-system.hpp  ecs-world.hpp  ecs.hpp
src/ecs/modules/: ecs.cppm
src/ecs/src/: ecs-schedulable.cpp  ecs-system-traits.cpp  ecs-system.cpp  ecs-world.cpp
src/ecs/tests/: query-compile-test.cpp  system-compile-test.cpp  test_app.cpp  test_commands.cpp  test_graph.cpp  test_query.cpp  test_resources.cpp  test_schedulable.cpp  test_system.cpp  test_world.cpp
src/render/: CMakeLists.txt  render.cppm  types.cppm
src/window/: CMakeLists.txt  sdl.cppm  types.cppm  window.cppm  window_plugin.cpp
src/window/systems/: init.cpp  poll.cpp  shutdown.cpp  swap.cpp
